err/products.userandgroupselectionwidget.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget'...
Listing './lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget/i18n'...
Compiling './lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget/memberlookup.py'...
***   File "./lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget/memberlookup.py", line 33
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget/profile'...
Listing './lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget/skins'...
Listing './lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget/skins/userandgroupselectionwidget'...
Compiling './lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget/widget.py'...
***   File "./lib/python3.5/site-packages/Products/UserAndGroupSelectionWidget/widget.py", line 49
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.UserAndGroupSelectionWidget-2.0.4.egg-info'...
Listing './lib/python3.5/site-packages/bda'...
Listing './lib/python3.5/site-packages/bda/cache'...
Compiling './lib/python3.5/site-packages/bda/cache/memcached.py'...
***   File "./lib/python3.5/site-packages/bda/cache/memcached.py", line 62
    raise MemcachedException, \
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bda/cache/nullcache.py'...
***   File "./lib/python3.5/site-packages/bda/cache/nullcache.py", line 27
    raise NotImplementedError, \
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bda/cache/tests'...
Listing './lib/python3.5/site-packages/bda.cache-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_memcached-1.59.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
